# MLOps-ColorFlow

./: .dockerignore  .gitignore  README.md  docker-compose.yml  infer.py  pix2pix-is-all-you-need.ipynb  pyproject.toml  requirements.txt
.github/workflows/: gke-eps.yaml
configs/: inference.yaml  train.yaml
configs/data/: coco.yaml  dvc.yaml
configs/model/: pix2pix.yaml
configs/tracking/: mlflow.yaml
data/: images.dvc
docker/: base.Dockerfile  entrypoint.sh  mlflow.Dockerfile  training.Dockerfile
docs/architecture/: architecture_overview.py  kubernetes_setup_guide.md
docs/img/: pipeline_architecture
k8s/: README.md
k8s/base/: app-ingress.yaml  checkpoints-pvc.yaml  kustomization.yaml  limitrange.yaml  mlflow-artifacts-pvc.yaml  mlflow-deployment.yaml  mlflow-secret.yaml  mlflow-service.yaml  mlserver-deployment.yaml  mlserver-service.yaml  model-registry-job.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  registry-job.yaml  runtime-serviceaccount.yaml  trainer-job.yaml  ui-deployment.yaml  ui-service.yaml
k8s/kind/: cluster.yaml  ingress-nginx-controller-patch.yaml
notebooks/: filter_grayscale.ipynb
pix2pix-is-all-you-need/: .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pix2pix-is-all-you-need.ipynb  pyproject.toml  requirements.txt
pix2pix-is-all-you-need/mlops-coco/: images.dvc
scripts/: build_and_push_gke_images.sh  configure_gke_overlay.sh  gke.env  gke.env.example  run_training_and_register.sh
services/mlflow/: Dockerfile  README.md
services/mlserver/: Dockerfile  README.md  app.py  model-settings.json  model.py  requirements.txt  settings.json
services/model_registry/: Dockerfile  README.md  register_model.py
services/registry/: Dockerfile  README.md  promote_local_model.py  recover_interrupted_run.py  register.py
services/ui/: Dockerfile  (+4 more)
(+85 files in other folders)
